<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_dark_blue">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_default" />

    <TextView
        android:id="@+id/textViewEpisodeItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/episode_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textViewEpisodeItemAirDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/episode_airdate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEpisodeItemName" />

    <TextView
        android:id="@+id/textViewEpisodeItemEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/episode_episode"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textViewEpisodeItemAirDate"
        app:layout_constraintStart_toStartOf="@+id/textViewEpisodeItemAirDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewEpisodeItemAirDate" />

    <TextView
        android:id="@+id/textViewCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/characters"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEpisodeItemEpisode" />

    <ProgressBar
        android:id="@+id/progressBarCharacterItem"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCharacters"
        app:layout_constraintStart_toEndOf="@+id/textViewCharacters"
        app:layout_constraintTop_toTopOf="@+id/textViewCharacters" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCharacterItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCharacters"
        tools:listitem="@layout/character_item_list"/>
</androidx.constraintlayout.widget.ConstraintLayout>