<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_dark_blue">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_default" />

    <TextView
        android:id="@+id/textViewLocationItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/location_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textViewLocationItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/location_type"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationItemName" />

    <TextView
        android:id="@+id/textViewLocationItemDimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/location_dimension"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textViewLocationItemType"
        app:layout_constraintStart_toStartOf="@+id/textViewLocationItemType"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationItemType" />

    <TextView
        android:id="@+id/textViewResidents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/residents"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationItemDimension" />

    <ProgressBar
        android:id="@+id/progressBarResidentItem"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewResidents"
        app:layout_constraintStart_toEndOf="@+id/textViewResidents"
        app:layout_constraintTop_toTopOf="@+id/textViewResidents" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResidentItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResidents"
        tools:listitem="@layout/character_item_list"/>
</androidx.constraintlayout.widget.ConstraintLayout>